fix: some animations on mobile are broken

--- a/styles/global.css
+++ b/styles/global.css
@@ -8,6 +8,7 @@ body {
   font-size: 18px;
   background: #2C2F33;
   width: 100%;
+  overflow-x: hidden;
 }
 
 * {
